Configured HomeController - Added Filter & Sorting Functionality
Fixed Cell Factory, List View & XML View

Fixed Project Structure, Test Structure and added HomeControllerTest